# ffdrafttracker

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
data/: auction_prices.json  config.json  draft_state.json  league_history.json  owners.json  player_stats.json  players.json
data/2025/: draft_state.json  owners.json  player_stats.json
docs/: .gitkeep  2025_draft_recap.html  index.html  league-history.css  league-history.js  league_history.html  openapi.json
docs/data/: league_history.json
src/: draft_rules.py  espn_history.py  league_history_build.py  persistence.py
src/api/: admin_routes.py  read_routes.py  schemas.py
src/booth/: __init__.py  log.py  slice.py  watch.py
src/enums/: __init__.py  position.py  team.py
src/models/: __init__.py  action_log.py  action_logger.py  auction_prices.py  configuration.py  draft_pick.py  draft_state.py  league_history.py  nominated.py  owner.py  player.py  player_stats.py  team.py
src/services/: draft_rules.py
static/css/: common.css  draft-set-admin.css  draft-set-viewer.css  draft.css  league-history.css  team-viewer.css
static/js/: draft-admin.js  draft-shared.js  league-history.js  team-viewer.js
templates/: index.html  team_viewer.html
tests/e2e/: test_complete_draft.py
tests/integration/: __init__.py  test_comments_endpoint.py  test_file_persistence.py  test_main_api.py
tests/unit/: test_draft_rules.py  test_espn_history.py  test_league_history_build.py  test_main.py  test_player_stats_endpoint.py  (+1 more)
utils/: add_espn_season.py  build_league_history.py  fetch_espn_players.py  fetch_player_stats.py  generate_docs.py  generate_draft_recap.py
(+37 files in other folders)
